--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.8.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
